@@ -668,3 +668,7 @@ Reverting edits.
 Not breaking once again.
 Try changing stuff in the PyArg_ParseTuple().
 
+*****
+
+So far so good. Updated the rest of the PyArg_ParseTuple variables.
+
